syntax = "proto3";

package org.erwinkok.libp2p.core.peerstore.pb;

// AddrBookRecord represents a record for a peer in the address book.
message AddressBookRecord {
    // The peer ID.
    bytes peer_id = 1;

    // The multiaddresses. This is a sorted list where element 0 expires the soonest.
    repeated AddressEntry addresses = 2;

    // The most recently received signed PeerRecord.
    CertifiedRecord certified_record = 3;

    // AddrEntry represents a single multiaddress.
    message AddressEntry {
        bytes address = 1;

        // The point in time when this address expires in epoch millis.
        int64 expiry = 2;

        // The original TTL of this address in millis.
        int64 ttl = 3;
    }

    // CertifiedRecord contains a serialized signed PeerRecord used to
    // populate the signedAddrs list.
    message CertifiedRecord {
        // The Seq counter from the signed PeerRecord envelope
        uint64 sequence = 1;

        // The serialized bytes of the SignedEnvelope containing the PeerRecord.
        bytes raw = 2;
    }
}